[tool.poetry]
name = "predicators"
version = "0.1.0"
description = "Learning predicates for TAMP"
authors = ["Rohan Chitnis <ronuchit@mit.edu>, Tom Silver <tslvr@mit.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.21.0"
pytest = "^6.2.5"
gym = "^0.21.0"
matplotlib = "^3.5.0"
imageio = "^2.11.0"
imageio-ffmpeg = "^0.4.5"
torch = "^1.10.0"
scipy = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest-cov = ">=2.12.1"
pytest-pylint = ">=0.18.0"
mypy = {git = "https://github.com/python/mypy.git", rev = "9a10967fdaa2ac077383b9eccded42829479ef31"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
